# maestro

./: .gitignore  CLAUDE.md  DOCS-FRAMEWORK-GUIDE.md  MAESTRO-SPEC.md  POSTGRESQL-TUTORIAL-TEMPLATE.md  PYESTRO-BOILERPLATE-CLI.md  PYESTRO-SUMMARY.md  README.md  SPEC.md
pyestro/: .gitignore  DEVELOPMENT.md  README  README.md  mkdocs.yml  pyestro.example.json  pyestro.json  pyestro.py  pyproject.toml
pyestro/docs/: mkdocs.yml
pyestro/docs/docs/: index.md
pyestro/docs/docs/developer-guide/: api.md  architecture.md  contributing.md
pyestro/docs/docs/getting-started/: configuration.md  installation.md  quickstart.md
pyestro/docs/docs/reference/: cli.md  config-schema.md  legacy-maestro-tutorial.md  maestro-spec.md  migration.md
pyestro/docs/docs/tutorials/: home-network-setup.md  home-network-template.yml  index.md  postgresql-setup.md  setup-home-network.sh
pyestro/docs/docs/user-guide/: ansible.md  commands.md  project-templates.md  reclass.md
pyestro/docs/site/: 404.html  index.html
pyestro/docs/site/developer-guide/api/: index.html
pyestro/docs/site/developer-guide/architecture/: index.html
pyestro/docs/site/developer-guide/contributing/: index.html
pyestro/docs/site/getting-started/configuration/: index.html
pyestro/docs/site/getting-started/installation/: index.html
pyestro/docs/site/getting-started/quickstart/: index.html
pyestro/docs/site/reference/cli/: index.html
pyestro/docs/site/reference/config-schema/: index.html
pyestro/docs/site/reference/maestro-spec/: index.html
pyestro/docs/site/reference/migration/: index.html
pyestro/docs/site/search/: search_index.json
pyestro/pyestro/: __init__.py
pyestro/pyestro/cli/: __init__.py  main.py
pyestro/pyestro/core/: __init__.py  ansible.py  config.py  file_ops.py  git.py  reclass.py  templates.py  validation.py
pyestro/pyestro/integrations/: __init__.py  ansible.py
pyestro/pyestro/parsers/: __init__.py  reclass_parser.py
pyestro/pyestro/templates/basic/: .gitignore.j2  README.md.j2  pyestro.json.j2  template.json
pyestro/pyestro/templates/home-network/: .gitignore.j2  README.md.j2  pyestro.json.j2  setup.sh.j2  template.json
pyestro/pyestro/templates/postgres/: .gitignore.j2  README.md.j2  pyestro.json.j2  setup.sh.j2  template.json
(+29 files in other folders)
